welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:1: error: type mismatch;
 found   : Unit
 required: Boolean
def makes10(a:Int, b:Int):Boolean = {
                                    ^